--- a/public/assets/css/ltr.css
+++ b/public/assets/css/ltr.css
@@ -84,7 +84,11 @@ html {
 
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
-
+/* ++++++++++++++++++++++++++++ Scroller +++++++++++++++++++++++++++ */
+.nicescroll-cursors {
+    width:8px !important;
+    background-color:rgba(255, 255, 255, 0.5) !important;
+}
 body {
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -14981,7 +14985,7 @@ button.toast-close-button {
 
 /*# sourceMappingURL=bootstrap-datepicker.css.map */
 /*
-    Common 
+    Common
 */
 .wizard,
 .tabcontrol {
@@ -18895,7 +18899,7 @@ html {
   font-size: 14px; }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Cairo', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 0.95rem;
