--- a/public/assets/css/rtl.css
+++ b/public/assets/css/rtl.css
@@ -108,6 +108,11 @@ body {
   color: #212529;
   text-align: right;
   background-color: #fff; }
+/* ++++++++++++++++++++++++++++ Scroller +++++++++++++++++++++++++++ */
+.nicescroll-cursors {
+    width:8px !important;
+    background-color:rgba(255, 255, 255, 0.5) !important;
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -19771,7 +19776,7 @@ html {
   font-size: 14px; }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Cairo', sans-serif !important;
   margin: 0;
   padding: 0;
   font-size: 0.95rem;
