--- a/public/assets/css/ltr.css
+++ b/public/assets/css/ltr.css
@@ -70,7 +70,12 @@ NOTE: This file includes all admin Template plugins and Shortcodes. If you don't
 
 *, ::after, ::before {
   box-sizing: border-box; }
-
+/* +++++++++++++++++++++++ Scrollbar ++++++++++++++++++++++ */
+.nicescroll-cursors
+{
+    width:10px !important;
+    background-color:rgba(255, 255, 255, 0.5) !important;
+}
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -84,11 +89,7 @@ html {
 
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
-/* ++++++++++++++++++++++++++++ Scroller +++++++++++++++++++++++++++ */
-.nicescroll-cursors {
-    width:8px !important;
-    background-color:rgba(255, 255, 255, 0.5) !important;
-}
+
 body {
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -1965,8 +1966,8 @@ a.btn.disabled, fieldset:disabled a.btn {
 
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf; }
+  background-color: transparent;
+  border-color: transparent ; }
 
 .btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
@@ -18899,7 +18900,7 @@ html {
   font-size: 14px; }
 
 body {
-  font-family: 'Cairo', sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 0.95rem;
@@ -20238,6 +20239,7 @@ ul.list-unstyled li {
   .content-wrapper .page-title {
     padding: 0px; }
   .content-wrapper .breadcrumb {
+    font-size:1.2rem !important;
     background: transparent;
     margin-bottom: 1.4rem; }
 
@@ -20386,6 +20388,7 @@ ul.list-unstyled li {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
   .side-menu-fixed .right-nav-text {
+    font-size: 16px;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease 0s;
     -moz-transition: opacity 0.2s ease 0s;
@@ -20477,7 +20480,7 @@ ul.list-unstyled li {
   padding: 7px 15px 7px 50px;
   display: block;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 300; }
   .side-menu-fixed .side-menu li ul li a:hover {
     background: rgba(0, 0, 0, 0.3);
