--- a/public/assets/css/rtl.css
+++ b/public/assets/css/rtl.css
@@ -38,6 +38,8 @@ NOTE: This file includes all admin Template plugins and Shortcodes. If you don't
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -75,8 +77,7 @@ NOTE: This file includes all admin Template plugins and Shortcodes. If you don't
   box-sizing: border-box; }
 
 html {
-  font-family: sans-serif;
-  line-height: 1.15;
+    line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
@@ -101,18 +102,13 @@ section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: 'Cairo', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: right;
   background-color: #fff; }
-/* ++++++++++++++++++++++++++++ Scroller +++++++++++++++++++++++++++ */
-.nicescroll-cursors {
-    width:8px !important;
-    background-color:rgba(255, 255, 255, 0.5) !important;
-}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -19772,12 +19768,20 @@ ol.ui.list ol li,
   left: 0;
   top: 0; }
 
+  /* +++++++++++++++++++++++ Scrollbar ++++++++++++++++++++++ */
+.nicescroll-cursors
+{
+    width:10px !important;
+    background-color:rgba(255, 255, 255, 0.5) !important;
+}
+
 html {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 body {
-  font-family: 'Cairo', sans-serif !important;
-  margin: 0;
+
+    margin: 0;
   padding: 0;
   font-size: 0.95rem;
   color: #626262; }
@@ -21121,6 +21125,7 @@ ul.list-unstyled li {
   .content-wrapper .page-title {
     padding: 0px; }
   .content-wrapper .breadcrumb {
+    font-size:1.2rem !important;
     background: transparent;
     margin-bottom: 1.4rem; }
 
@@ -21269,7 +21274,7 @@ ul.list-unstyled li {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
   .side-menu-fixed .right-nav-text {
-    font-size:15px;
+    font-size: 1.3rem;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease 0s;
     -moz-transition: opacity 0.2s ease 0s;
@@ -21289,7 +21294,7 @@ ul.list-unstyled li {
     backface-visibility: hidden;
     padding-top: 20px; }
     .side-menu-fixed .side-menu li {
-        font-size:15px;
+      font-size:18px;
       width: 228px; }
     .side-menu-fixed .side-menu li.navigation-header span {
       padding: 11px 15px; }
@@ -21368,7 +21373,7 @@ ul.list-unstyled li {
   padding: 7px 50px 7px 15px;
   display: block;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 12px;
+  font-size: 1.1rem;
   font-weight: 300; }
   .side-menu-fixed .side-menu li ul li a:hover {
     background: rgba(0, 0, 0, 0.3);
@@ -22075,7 +22080,7 @@ footer a {
   color: rgba(220, 53, 69, 0.4) !important; }
 
 .modal-dialog select.form-control:not([size]):not([multiple]) {
-  height: calc(3.1rem + 5px); }
+  height: calc(3.1rem + 2px); }
 
 select.form-control:not([size]):not([multiple]) {
   height: calc(2.8rem + 2px); }
@@ -23135,9 +23140,11 @@ div.dataTables_wrapper div.dataTables_filter {
   text-align: left; }
 
 .table td {
+    font-size:1rem;
   vertical-align: middle; }
 
 .table th {
+    font-size:1.1rem;
   vertical-align: middle; }
 
 .table-bordeblue tbody tr td {
